Lista de Usuario

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
         <div id="sidebar">
           <%= link_to image_tag("logo.jpg", id: "productLogo"), root_path %>
           <p><%= link_to 'Ask a Question', new_question_path, id: "addQuestion" %></p>
+		  <p><%= link_to 'Members', members_path, id: "addQuestion" %></p>
         </div>
       </div>
 
